[project]
name = "monorepo"
version = "0.0.1"
description = "Example of using Bazel with python `src` and `tests` dir"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Abu Adan" },                              # so that package core metadata "Author" field gets populated.
  { name = "Abu Adan", email = "abuadan@gmail.com" },
]
maintainers = []
keywords = []
classifiers = []
dependencies = [
  # # "fastapi",
  # "uvicorn",
  # "gunicorn",
  # "cleo",
  # "click",
  # "tomlkit",
  # "SQLAlchemy",
  # # "alembic",
  # "pydantic",
  # "pydantic-core",
  # "pydantic-settings",
  # "sqlglot[rs]",
  # "sortedcontainers",
  # "loguru",
  # "notifiers",
  # "pyspark[sql]",
  # "pyarrow",
  # "numpy",
  # "more-itertools",
  # "django",
  # "networkx",
  # "pillow",
  # "olefile",
  # "cffi",
  # "ipython",
  # "greenlet",
  # "importlib-metadata",
  # "importlib-resources",
  # "matplotlib",
  # "seaborn",
  # "defusedxml",
  # "colorama",
  # # "PySide6",
  # # "PyQt6",
  # "keyring",
]


[build-system]
requires = ["setuptools >=69.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["dataplatform"]


[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-watch",
  "hypothesis",
  "pytest-icdiff",
  "pytest-xdist",
  "polyfactory",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "flake8-docstrings"]
lint = [
  "black",
  "isort",
  "pre-commit",
  "mypy",
  "ruff",
  "bandit",
  "pyright",
  "yamllint",
  "docformatter",
]
dev = [
  "requests",
  "types-requests",
  "ipython",
  "dockerfile",
  "autoflake",
  "tox",
  "monorepo[docs]",
  "monorepo[test]",
  "monorepo[lint]",

]
build = ["build", "setuptools", "wheel"]

[tool.docformatter]
recursive = true
wrap-summaries = 82
blank = true

[tool.mypy]
plugins = ["pydantic.mypy"]

exclude = ['venv', '.venv', "tests"]
files = "src"
cache_dir = "./.mypy_cache"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
ignore_missing_imports = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | \.venv
  | build
  | dist
  | deploy
)/
'''
[tool.pyright]

exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]

reportUnusedImport = false
reportUnusedVariable = false
pythonVersion = "3.12"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*U.*mode is deprecated:DeprecationWarning",
  "error",
  "ignore:setup.py install is deprecated:Warning",
  "ignore:easy_install command is deprecated:Warning",
  "ignore:setuptools.installer and fetch_build_eggs are deprecated:Warning",
  "ignore:.*ends with a trailing slash, which is not supported by setuptools:FutureWarning",
  "ignore:Config variable 'Py_DEBUG' is unset:RuntimeWarning",
  "ignore:Config variable 'WITH_PYMALLOC' is unset, Python ABI tag may be incorrect:RuntimeWarning",
  "default:shell/Perl-style subs.* are deprecated:DeprecationWarning",
  "default:subprocess .* is still running:ResourceWarning",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  "ignore:onerror argument is deprecated, use onexc instead:DeprecationWarning",                     # Caused by wheel and Python 3.12
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
minversion = "7.1"
addopts = "-ra -q"
pythonpath = ["src"]
python_files = ["tests.py", "test_*", "*_tests.py"]
log_file = "./.logs/pytest.log"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  ".venv",
]

# Same as Black.
cache-dir = "./.ruff_cache"

# Assume Python 3.12
target-version = "py312"
line-length = 88
indent-width = 4
