
crates_repository = use_extension("@rules_rust//crate_universe:defs.bzl", "crates_repository")

# Example of using crate_universe. For gazelle_rust to work correctly with crate_universe
# dependencies, this must be paired with two gazelle directives; see BUILD.bazel.
crates_repository(
    name = "crates",
    cargo_lockfile = "cargo.lock",
    lockfile = "cargo.bazel.lock",
    packages = {
        "clap": crate.spec(
            features = ["derive"],
            version = "3.2",
        ),
    },
)

load("@gazelle_rust//:deps1.bzl", "gazelle_rust_dependencies1")

gazelle_rust_dependencies1()

load("@gazelle_rust//:deps2.bzl", "gazelle_rust_dependencies2")

gazelle_rust_dependencies2()

